# goost

./: .codecov.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CPPLINT.cfg  DEPLOY.md  LICENSE  MagmaDataImit.cpp  MagmaDataImit.h  MagmaKey.cpp  MagmaKey.h  MagmaSbox.cpp  MagmaSbox.h  MagmaStringIsKeyData.cpp  MagmaStringIsKeyData.h  Makefile  README.md  SConstruct  TestMagmaDataImit.cpp  conanfile.py  conanfile.txt  main.cpp  shippable.yml  style.sh  test_report.py
.circleci/: config.yml
.github/workflows/: build.yml  release.yml  testing.yml
benchmark/: main.cpp
benchmark/gost89/: DataImitTest.cpp  ProceduralImitTest.cpp
goost/: Sink.h  Source.h
goost/gost89/: CFBSink.cpp  CFBSink.h  CFBSource.cpp  CFBSource.h  DataImit.cpp  DataImit.h  ECBSink.h  ECBSource.h  ImitedBlock.cpp  ImitedBlock.h
goost/kuznyechik/: BlkCached.cpp  BlkCached.h  BlkEncrypted.cpp  BlkEncrypted.h  BlkIncremented.cpp  BlkIncremented.h  BlkIterKey.cpp  BlkIterKey.h  BlkL.cpp  BlkL.h  BlkR.cpp  BlkR.h  BlkRaw.cpp  BlkRaw.h  BlkS.cpp  BlkS.h  BlkShifted.cpp  BlkShifted.h  BlkString.cpp  BlkString.h  BlkXored.cpp  BlkXored.h  Block.h  Imit.cpp  Imit.h  Iterator.h  Key.cpp  Key.h  KeyDataString.cpp  KeyDataString.h  StCTREncrypted.cpp  StCTREncrypted.h  StMemory.cpp  StMemory.h  Stream.h
goost/magma/: BlkBackwarded.cpp  BlkBackwarded.h  BlkDecrypted.cpp  BlkDecrypted.h  BlkEncrypted.cpp  BlkEncrypted.h  BlkForwarded.cpp  BlkForwarded.h  BlkRaw.cpp  BlkRaw.h  BlkShifted.cpp  BlkShifted.h  BlkString.cpp  BlkString.h  BlkSwapped.cpp  BlkSwapped.h  BlkXored.cpp  BlkXored.h  Block.h  CFBSink.cpp  CFBSink.h  CFBSource.cpp  CFBSource.h  Container.h  ECBSink.cpp  ECBSink.h  ECBSource.cpp  ECBSource.h  Imit.cpp  (+29 more)
gost89/: DataImit.cpp  DataImit.h  ImitedBlock.cpp  ImitedBlock.h
kuznyechik/: BlkCached.h  BlkEncrypted.cpp  BlkEncrypted.h  BlkIncremented.h  BlkIterKey.h  BlkL.cpp  BlkL.h  BlkR.cpp  BlkR.h  BlkRaw.cpp  BlkRaw.h  BlkS.cpp  BlkS.h  BlkShifted.cpp  BlkShifted.h  BlkString.cpp  BlkString.h  BlkXored.cpp  BlkXored.h  Block.cpp  Block.h  BlockIterator.h  CTREncryptedStream.cpp  CTREncryptedStream.h  DataStream.cpp  DataStream.h  EncryptedBlock.cpp  EncryptedBlock.h  Imit.cpp  Imit.h  Iterator.h  Key.cpp  Key.h  KeyDataString.cpp  KeyDataString.h  KeyIter.cpp  KeyIter.h  LBlock.cpp  LBlock.h  Operations.cpp  (+10 more)
magma/: BlkBackwarded.cpp  BlkBackwarded.h  BlkDecrypted.cpp  BlkDecrypted.h  BlkEncrypted.cpp  BlkEncrypted.h  BlkForwarded.cpp  BlkForwarded.h  BlkRaw.cpp  BlkRaw.h  BlkShifted.h  BlkString.cpp  BlkString.h  BlkSwapped.h  BlkXored.h  Block.cpp  Block.h  BlockIterator.h  DataImit.cpp  DataImit.h  DataStream.cpp  DataStream.h  DecryptedBlock.cpp  DecryptedBlock.h  EncryptedBlock.cpp  EncryptedBlock.h  Imit.cpp  Imit.h  ImitedBlock.cpp  ImitedBlock.h  Iterator.h  Key.cpp  Key.h  KeyCachedData.cpp  KeyCachedData.h  KeyData.h  KeyDataNative.cpp  KeyDataNative.h  KeyDataString.cpp  KeyDataString.h  (+25 more)
test/: CMakeLists.txt  Hex64Match.cpp  Hex64Match.h  Hex64Source.cpp  Hex64Source.h  Hex64SourceTest.cpp  Hex64SourceTest.h  HexMatch.cpp  HexMatch.h  SourceMatch.cpp  SourceMatch.h  SourceText.cpp  SourceText.h  SourceTextTest.cpp  SourceTextTest.h  TestSink.cpp  TestSink.h  TestSinkText.cpp  TestSinkText.h  goost_test.cpp  main.cpp  upp11.h
test/gost89/: BlkEncryptedTest.cpp  BlkEncryptedTest.h  CFBSinkTest.cpp  CFBSinkTest.h  CFBSourceTest.cpp  CFBSourceTest.h  DataImitTest.cpp  ProceduralImitTest.cpp  Test.cpp  Test.h  TestSbox.cpp  TestSbox.h
test/kuznyechik/: BlkCachedTest.cpp  BlkCachedTest.h  BlkEncryptedTest.cpp  BlkEncryptedTest.h  BlkIncrementedTest.cpp  BlkIncrementedTest.h  BlkIterKeyTest.cpp  BlkIterKeyTest.h  BlkKeyData.cpp  BlkKeyData.h  BlkLTest.cpp  BlkLTest.h  BlkRTest.cpp  BlkRTest.h  BlkRawTest.cpp  BlkRawTest.h  BlkSTest.cpp  BlkSTest.h  BlkShiftedTest.cpp  BlkShiftedTest.h  BlkXoredTest.cpp  BlkXoredTest.h  BlockTest.cpp  CTREncryptedStreamTest.cpp  EncryptedBlockTest.cpp  ImitTest.cpp  ImitTest.h  KeyDataStringTest.cpp  KeyDataStringTest.h  KeyIterTest.cpp  LBlockTest.cpp  RBlockTest.cpp  ReprBlock.cpp  ReprBlock.h  SBlockTest.cpp  StCTREncryptedTest.cpp  StCTREncryptedTest.h  Test.cpp  Test.h  TestBlockEqual.cpp  (+1 more)
test/magma/: BlkDecryptedTest.cpp  BlkDecryptedTest.h  BlkEncryptedTest.cpp  BlkEncryptedTest.h  BlkStringTest.cpp  BlkStringTest.h  BlkSwappedTest.cpp  BlkSwappedTest.h  CFBSinkTest.cpp  CFBSinkTest.h  CFBSourceTest.cpp  CFBSourceTest.h  DataImitTest.cpp  DataStreamTest.cpp  DecryptedBlockTest.cpp  ECBSinkTest.cpp  ECBSinkTest.h  ECBSourceTest.cpp  ECBSourceTest.h  EncryptedBlockTest.cpp  EncryptionBaseTest.cpp  EncryptionBaseTest.h  HexContainer.cpp  HexContainer.h  ImitTest.cpp  ImitTest.h  KeyCachedDataTest.cpp  KeyCachedDataTest.h  KeyDataNativeTest.cpp  KeyDataNativeTest.h  KeyDataStringTest.cpp  KeyDataStringTest.h  KeyTest.cpp  ReprBlock.cpp  ReprBlock.h  ReprKeyData.cpp  ReprKeyData.h  ReprStream.cpp  ReprStream.h  ReprStreamTest.cpp  (+16 more)
test2o/: CMakeLists.txt  test2o.cpp
test2o/kuznyechik/: BlkCachedTest.cpp  BlkEncryptedTest.cpp  BlkIncrementedTest.cpp  BlkIncrementedTest.h  BlkIterKeyTest.cpp  BlkIterKeyTest.h  BlkKeyData.cpp  BlkKeyData.h  BlkLTest.cpp  BlkLTest.h  BlkRTest.cpp  BlkRTest.h  BlkRawTest.cpp  BlkRawTest.h  BlkSTest.cpp  BlkShiftedTest.cpp  BlkXoredTest.cpp  BlockTest.cpp  BlockTest.h  EncryptedBlockTest.cpp  EncryptedBlockTest.h  ImitTest.cpp  KeyDataStringTest.cpp  KeyDataStringTest.h  KeyIterTest.cpp  KeyIterTest.h  LBlockTest.cpp  LBlockTest.h  ReprBlock.h  ReprKey.cpp  ReprKey.h  ReprKeyData.cpp  ReprKeyData.h  StCTREncryptedTest.cpp  Test.cpp  Test.h
test2o/magma/: BlkDecryptedTest.cpp  BlkEncryptedTest.cpp  BlkEncryptedTest.h  BlkStringTest.cpp  BlkStringTest.h  ImitTest.cpp  ImitTest.h  KeyCachedDataTest.cpp  KeyCachedDataTest.h  KeyDataNativeTest.h  ReprBlock.cpp  ReprBlock.h  ReprKeyData.cpp  ReprStream.cpp  ReprStreamTest.cpp  ReprTransformed.cpp  SboxNibbleTest.cpp  SboxNibbleTest.h  StMemoryTest.cpp  StMemoryTest.h  Test.cpp  Test.h  TestBlockEqual.cpp  TestBlockEqual.h
test_package/: CMakeLists.txt  example.cpp
